Adding the product API and related functionality.
